fixed z-index

--- a/cid-spa/src/index.css
+++ b/cid-spa/src/index.css
@@ -748,7 +748,7 @@ textarea {
     background-color: rgba(0,0,0,0.2);
     padding: 1em;
     border-bottom-left-radius: 20px;
-    z-index: 999;
+    z-index: 10;
     transition: 0.3s ease-in opacity;
 }
 
